   retrieving the first bytes of a corrupted file.

 * Issue #85: MKD response is supposed to include the directory name.

 * Issue #87: SIZE should be rejected when the current TYPE is ASCII.

 * Issue #88: REST should be rejected when the current TYPE is ASCII.

 * Issue #89: "TYPE AN" was erroneously treated as synonym for "TYPE A" when
   "TYPE L7" should have been used instead.


Version: 0.5.0 - Date: 2008-09-20
---------------------------------

Major enhancements:

 * Issue #72: pyftpdlib now provides configurable idle timeouts to disconnect
   client after a long time of inactivity.

 * Issue #73: impose a delay before replying for invalid credentials to minimize
   the risk of brute force password guessing.

 * Issue #74: it is now possible to define permission exceptions for certain
   directories (e.g. creating a user which does not have write permission except
   for one sub-directory in FTP root).

 * Improved bandwidth throttling capabilities of demo/throttled_ftpd.py script
   by having used the new CallLater class which drastically reduces the number
   of calls to time.time().

Bugfixes:

 * Issue #62: some unit tests were failing on dual core machines.

 * Issue #71: socket handles are leaked when a data transfer is in progress and
   user QUITs.

 * Issue #75: orphaned file was left behind in case STOU failed for insufficient
   user permissions.

 * Issue #77: incorrect OOB data management on FreeBSD.


Version: 0.4.0 - Date: 2008-05-16
---------------------------------

Major enhancements:

 * Issue #65: assume the id of real users when using system dependent
   authorizers.
 * Issue #67: added IPv6 support.

Bugfixes:

 * Issue #64: issue when authenticating as anonymous user using user-defined
   authorizers.
 * Issue #66: WinNTAuthorizer does not determine the real user home directory.
 * Issue #69: DummyAuthorizer incorrectly uses class attribute instead of
   instance attribute for user_table dictionary.