@@ -33,6 +33,9 @@ Bugfixes:
  * Issue #89: "TYPE AN" was erroneously treated as synonym for "TYPE A" when
    "TYPE L7" should have been used instead.
 
+ * Issue #90: an unhandled exception could occur when using MDTM against a file
+   modified before year 1970.
+
 
 Version: 0.5.0 - Date: 2008-09-20
 ---------------------------------
